Fixed the about page mission statement on tablet and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -690,6 +690,7 @@ footer .copyright {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-flow: row wrap;
   padding-top: 20px;
 }
 
